src/test/dev-workspace/src/main/java/net/labymod/core/laby3d/opengl/error/generated/EXTGeometryShader4_StringErrorContext.java
package net.labymod.core.laby3d.opengl.error.generated;

import java.util.HashMap;
import java.util.Map;

/* JADX INFO: loaded from: LabyMod-4.jar:net/labymod/core/laby3d/opengl/error/generated/EXTGeometryShader4_StringErrorContext.class */
public final class EXTGeometryShader4_StringErrorContext {
    public static Map<String, String> buildMethods() {
        Map<String, String> methods = new HashMap<>();
        methods.put("glProgramParameteriEXT(III)V", "net/labymod/core/laby3d/opengl/error/generated/EXTGeometryShader4ErrorContext");
        methods.put("glFramebufferTextureEXT(IIII)V", "net/labymod/core/laby3d/opengl/error/generated/EXTGeometryShader4ErrorContext");
        methods.put("glFramebufferTextureLayerEXT(IIIII)V", "net/labymod/core/laby3d/opengl/error/generated/EXTGeometryShader4ErrorContext");
        methods.put("glFramebufferTextureFaceEXT(IIIII)V", "net/labymod/core/laby3d/opengl/error/generated/EXTGeometryShader4ErrorContext");
        return methods;
    }
}
